# news_site

./: .env.dev  .gitignore  Makefile  docker-compose.yml  main_file.txt  pyproject.toml  secret.file  some_file2.txt  some_file_for_master_branch.ahah
app/: __main__.py
app/config/: __init__.py  settings.py
app/db/: alembic.ini
app/db/connection/: __init__.py  session.py
app/db/migrator/: env.py
app/db/migrator/versions/: ad92e10d7cb8_.py  e2115d0a864c_.py
app/db/models/: __init__.py  users.py
app/endpoints/: __init__.py  account.py  auth.py
app/schemas/: user.py
app/tools/: auth.py  crypto.py
app/usecase/: user.py
