[tool.poetry]
name = "news-site"
version = "0.1.0"
description = ""
authors = ["Andrey Bodryagin <andrey.bodryagin.person@gmail.com>"]
readme = "README.md"
packages = [{include = "news_site"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
