[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrey Bodryagin <andrey.bodryagin.person@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic = "^2.3.0"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.7"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
